--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>BookMonkey</title>
@@ -7,7 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <bm-root></bm-root>
+  <bm-root>
+    <div class="ui active inverted dimmer">
+      <div class="ui text loader large">Lade BookMonkey...</div>
+    </div>
+  </bm-root>
+
+
+
 </body>
+
 </html>
